--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ input {
   padding: 0.75rem;
   border: 1px solid var(--bg-dark);
   border-radius: 4px;
-  background-color: var(--bg-dark);
+  background-color: var(--bg-medium);
   color: var(--text-light);
   font-size: 1rem;
 }
@@ -74,17 +74,33 @@ button:hover {
   background-color: var(--primary-dark);
 }
 
-a {
-  color: var(--primary-color);
+/* Make the menu-item selector more specific by including the 'a' tag */
+a.menu-item{
+  color: white;
+  background-color: var(--primary-color);
   text-decoration: none;
   text-align: center;
-  display: block;
+  display: inline;
   margin-top: 1rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
 }
 
-a:hover {
-  text-decoration: underline;
+a.menu-item:hover {
+  background-color: var(--primary-dark);
 }
+
+a.active {
+  color: white;
+  background-color: var(--primary-dark);
+  text-decoration: none;
+  text-align: center;
+  display: inline;
+  margin-top: 1rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
+}
+
 
 .messages {
   list-style-type: none;
