--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,11 +21,11 @@ body {
 
 .container {
   background-color: var(--bg-dark);
-  border-radius: 8px;
+  border-radius: 0.5rem;
   padding: 2rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
   width: 100%;
-  max-width: 400px;
+  max-width: 60rem;
 }
 
 h1 {
@@ -48,7 +48,7 @@ label {
 input {
   padding: 0.75rem;
   border: 1px solid var(--bg-dark);
-  border-radius: 4px;
+  border-radius: 0.25rem;
   background-color: var(--bg-medium);
   color: var(--text-light);
   font-size: 1rem;
@@ -62,7 +62,7 @@ button {
   background-color: var(--primary-color);
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   padding: 0.75rem;
   font-size: 1rem;
   cursor: pointer;
@@ -83,7 +83,7 @@ a.menu-item{
   display: inline;
   margin-top: 1rem;
   padding: 0.2rem 0.5rem;
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 a.menu-item:hover {
@@ -98,7 +98,7 @@ a.active {
   display: inline;
   margin-top: 1rem;
   padding: 0.2rem 0.5rem;
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 
@@ -112,7 +112,7 @@ a.active {
   background-color: rgba(213, 97, 153, 0.2);
   color: var(--text-light);
   padding: 0.75rem;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   margin-bottom: 0.5rem;
 }
 
@@ -124,10 +124,88 @@ a.active {
   color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 .logout-btn:hover {
   background-color: var(--primary-color);
   text-decoration: none;
+}
+
+/* ==========================================================================
+   Table Styles
+   ========================================================================== */
+   table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1.25rem;
+    background: var(--bg-medium);
+    box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.3);
+}
+
+th, td {
+    padding: 0.75rem;
+    text-align: left;
+    border-bottom: 0.063rem solid var(--border-color);
+}
+
+th {
+    background-color: var(--bg-light);
+    color: var(--text-light);
+}
+
+tr:hover {
+    background-color: #383838;
+}
+
+.chart-container {
+  flex: 1;
+  background-color: var(--bg-medium);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.2);
+  max-height: 25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0.5rem;
+  position: relative;
+}
+
+.chart-container canvas {
+  width: 100% !important;
+  height: auto !important;
+}
+
+
+.month-summary .summary-boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.summary-boxes .summary-info {
+  flex: 1;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.summary-box {
+  background-color: var(--bg-medium);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.2);
+  margin-bottom: 1rem;
+  width: 60%;
+}
+
+.category-chart-container {
+  position: relative;
+  height: 20rem;
+  width: 100%;
+  margin-bottom: 2rem;
 }
