--- a/templates/charts.html
+++ b/templates/charts.html
@@ -17,6 +17,8 @@
                 <a href="{{ url_for('salary') }}" class="menu-item">Add Salary</a>
                 <a href="{{ url_for('expenses') }}" class="menu-item">Expenses</a>
                 <a href="{{ url_for('charts') }}" class="active">Charts</a>
+                <a href="{{ url_for('investments') }}" class="menu-item">Investments</a>
+                <a href="{{ url_for('goals') }}" class="menu-item">Goals</a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">Log out</a>
             </nav>
         </header>
