--- a/templates/categories.html
+++ b/templates/categories.html
@@ -27,6 +27,8 @@
                 <a href="{{ url_for('salary') }}" class="menu-item">Add Salary</a>
                 <a href="{{ url_for('expenses') }}" class="menu-item">Expenses</a>
                 <a href="{{ url_for('charts') }}" class="menu-item">Charts</a>
+                <a href="{{ url_for('investments') }}" class="menu-item">Investments</a>
+                <a href="{{ url_for('goals') }}" class="menu-item">Goals</a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">Log out</a>
             </nav>
         </header>
