--- a/templates/salary.html
+++ b/templates/salary.html
@@ -15,6 +15,9 @@
                 <a href="{{ url_for('categories') }}" class="menu-item">Manage Categories</a>
                 <a href="{{ url_for('salary') }}" class="active">Add Salary</a>
                 <a href="{{ url_for('expenses') }}" class="menu-item">Expenses</a>
+                <a href="{{ url_for('charts') }}" class="menu-item">Charts</a>
+                <a href="{{ url_for('investments') }}" class="menu-item">Investments</a>
+                <a href="{{ url_for('goals') }}" class="menu-item">Goals</a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">Log out</a>
             </nav>
         </header>
